reverting fallback fixes and debug logs
Signed-off-by: hrishikesh-nalawade <hrishikesh.nalawade.17@gmail.com>